Adjusts YouTube video modals so the iframe is width: 100% to prevent video clipping in mobile view

--- a/v6/v6.css
+++ b/v6/v6.css
@@ -671,6 +671,9 @@
   transition: box-shadow 0.4s ease-out;
   box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19) !important;
 }
+.ssp-main-container .youtube-video iframe {
+  width: 100%;
+}
 .ssp-main-container .row-feature-dotted ul {
   padding-left: 0;
   list-style-type: none;
